Prebuilt player binaries, combined without an assembler (#38)
The SNDH build no longer assembles per tune set. YMX_sndh.S is now a
position-independent CORE with the three entries at 0/4/8 and a 'YMXC'
descriptor - version, unit size, flags, the format version it reads,
the workspace's fixed size, and two tool-patched offsets. It carries no
tags, no tunes and no workspace: ring size, chunk and frame count come
from each tune's header at init, so one core per unit size and flag
combination serves every shape, and subtunes may mix rings and chunks.
YMX_player.S is now a PC-relative PRG stub with a 'YMXP' descriptor -
subtunes, frames, marker flag - and the SNDH at its own end.

ymx/mkcores.sh assembles the matrix into dist/ - the one step that runs
rmac. MkSndh combines a core with packed tunes into an SNDH by byte
appending: the entry triple (each displacement the header length minus
2), the tag block, the core with its offsets patched, the subtune
table, the tunes and an exactly sized zero workspace. MkPrg prepends
the stub under a PRG header with an empty relocation table, and takes
a ready .sndh as well as tunes. Both verify the descriptor - magic,
versions, unit, flags - reject a tune whose shape breaks YmxFormat's
rules, and reassemble a dist binary older than its 68k sources.
ymx/mkrelease.sh stages all twelve cores, the stub and a SHA-256
manifest, and -publish puts them in a GitHub release tagged by format
version. doc/BINARIES.md is the byte contract, with the stack diagram:
a PRG around an SNDH around the core and the tunes, concatenated.

Tests: MkSndhTest and MkPrgTest check the combined bytes against the
contract on synthetic cores, so mvn test needs no rmac; MkReleaseTest
the variant matrix and refusals; BinariesConsistencyTest holds the
contract tables to the combiner constants and, where rmac is present,
assembles the binaries and reads every descriptor back. The rig's SNDH
test passes unchanged over the new file; a tool-built PRG runs under
Hatari, p